--- a/templates/search.html
+++ b/templates/search.html
@@ -50,7 +50,7 @@
           </a>
           <a href="{{ url_for('trending') }}">
             <img
-              src="{{ url_for('static', filename='images/trending.png') }}"
+              src="{{ url_for('static', filename='images/trending.PNG') }}"
               alt="Trending"
               class="icone bubble-img"
             />
