--- a/templates/404.html
+++ b/templates/404.html
@@ -67,7 +67,7 @@
       <h1>404</h1>
       <h2>Not Found</h2>
       <p>Desculpe, a página que você está procurando não foi encontrada.</p>
-      <p><a href="{{ url_for('login') }}">Voltar pro Início.</a></p>
+      <p><a href="{{ url_for('login') }}">Voltar para página inicial</a></p>
     </div>
   </body>
 </html>
