--- a/templates/404.html
+++ b/templates/404.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>404 Not Found</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
     <style>
-      /* Estilo para página 404 */
       body,
       html {
         margin: 0;
