Mudança na escrita dentro da caixinha de comentario

--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -65,7 +65,7 @@
                   id="comment_textarea"
                   name="comentario"
                   required
-                  placeholder="Escreva sua resposta..."
+                  placeholder="Qual seu comentário?..."
                 ></textarea>
               </div>
               <div class="options">
