--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -133,10 +133,9 @@
             class="icone"
           />
         </a>
-
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/trending.png') }}"
+            src="{{ url_for('static', filename='images/trending.PNG') }}"
             alt="Trending"
             class="icone bubble-img"
           />
