Quebra de linha na bio forçada

--- a/static/style.css
+++ b/static/style.css
@@ -1068,9 +1068,7 @@ button:active {
   margin: 0;
   color: #999999;
   font-size: 1em;
-  white-space: normal;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
+  overflow-wrap: break-word !important;
 }
 
 .perfil-info .bio-texto {
