Alteração na mensagem do html groups

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -10,13 +10,13 @@
     />
   </head>
   <body>
-    <div class="nav-top">Groups</div>
+    <div class="nav-top">Groups • Opinion</div>
 
     <div class="container">
-      <h2>⚠️ FUNÇÃO DE GRUPOS EM BREVE</h2>
+      <h2>FUNÇÃO DE GRUPOS EM BREVE</h2>
       <p>
-        Esperamos trabalhando na criação dessa função no Opinion, onde irá
-        conectar pessoas com mesmos interesses de assuntos.
+        Estamos trabalhando na criação de grupos no Opinion, uma ferramenta que
+        vai juntar pessoas com o mesmo nicho e interesses pessoais.
       </p>
     </div>
 
