<h1> config com menos distancia dos elementos

--- a/static/style.css
+++ b/static/style.css
@@ -1118,11 +1118,11 @@ button:active {
   text-align: center;
   color: #fff;
   font-size: 2em;
-  margin-bottom: 30px;
+  margin-bottom: 23px;
 }
 
 .config-container h2 {
-  text-align: left;
+  text-align: center;
   color: #fff;
   font-size: 1.2em;
   margin-bottom: 15px;
