--- a/static/style.css
+++ b/static/style.css
@@ -1166,20 +1166,26 @@ button:active {
 }
 
 .option-link {
-  display: inline-block;
+  display: block;
   color: rgba(255, 255, 255, 0.8);
   padding: 18px 0;
   text-align: center;
   text-decoration: none;
   font-weight: bold;
   background-color: transparent;
-  border-radius: 8px;
   border: none;
   transition: background-color 0.3s, color 0.3s;
+  position: relative;
 }
 
-.option-link:not(:last-child) {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+.option-link:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .option-link:hover {
