--- a/static/style.css
+++ b/static/style.css
@@ -1173,19 +1173,14 @@ button:active {
   text-decoration: none;
   font-weight: bold;
   background-color: transparent;
+  border-radius: 8px;
   border: none;
   transition: background-color 0.3s, color 0.3s;
   position: relative;
 }
 
-.option-link:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.1);
+.option-link:not(:last-child) {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .option-link:hover {
