Salvar a bio redirecionado pro perfil

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -22,7 +22,7 @@
           onclick="return confirmarLogout()"
           class="option-link btn-sair"
         >
-          Sair
+          Sair Da Conta
         </a>
       </div>
     </div>
