Tentando fazer os 3 pontinho aparecerem

--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="post-content">
-          {% if post.user_id == session['user_id'] %}
+          {% if post.user_id|string == session['user_id']|string %}
           <img
             src="{{ url_for('static', filename='images/three points.png') }}"
             onclick="toggleOpcoes({{ post.id }})"
