Add - Mais opições nas configurações

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,6 +13,14 @@
     <div class="container config-container">
       <h1>Configurações</h1>
       <hr />
+            <div class="options-container">
+        <a href="{{ url_for('terms') }}" class="option-link">
+          Termos e Diretrizes
+        </a>
+            <div class="options-container">
+        <a href="{{ url_for('help') }}" class="option-link">
+          Ajuda
+        </a>
       <div class="options-container">
         <a href="{{ url_for('terms') }}" class="option-link">
           Termos e Diretrizes
