Add - Mais opições nas configurações

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,11 +13,11 @@
     <div class="container config-container">
       <h1>Configurações</h1>
       <hr />
-            <div class="options-container">
-        <a href="{{ url_for('terms') }}" class="option-link">
-          Termos e Diretrizes
+      <div class="options-container">
+        <a href="{{ url_for('faq') }}" class="option-link">
+          Faq - Sobre nós
         </a>
-            <div class="options-container">
+      <div class="options-container">
         <a href="{{ url_for('help') }}" class="option-link">
           Ajuda
         </a>
