--- a/templates/settings.html
+++ b/templates/settings.html
@@ -15,7 +15,7 @@
       <hr />
       <div class="options-container">
         <a href="{{ url_for('faq') }}" class="option-link">
-          Faq - Sobre nós
+          Faq
         </a>
       <div class="options-container">
         <a href="{{ url_for('help') }}" class="option-link">
