--- a/templates/faq.html
+++ b/templates/faq.html
@@ -60,8 +60,8 @@
         <h3>📩 Como entrar em contato?</h3>
         <p>
           Se tiver dúvidas, sugestões ou encontrou algum bug, você pode usar a
-          página de <a href="{{ url_for('help_page') }}">Ajuda</a> para
-          conseguir suporte.
+          página de <a href="{{ url_for('help') }}">Ajuda</a> para conseguir
+          suporte.
         </p>
       </div>
     </div>
