--- a/static/style.css
+++ b/static/style.css
@@ -394,7 +394,7 @@ button:active {
   );
   border-radius: 16px;
   padding: 1px;
-  padding-top: 20px;
+  padding-top: 10px;
   overflow: hidden;
   max-width: 300px;
   width: 100%;
@@ -424,8 +424,8 @@ button:active {
   border-radius: 16px;
   border: none;
   width: 100%;
-  height: 80px;
-  min-height: 80px;
+  height: 100px;
+  min-height: 100px;
   color: #ffffff;
   font-family: sans-serif;
   font-size: 14px;
@@ -522,7 +522,7 @@ button:active {
 
 .container_chat_bot .chat .options .btn-submit:focus svg {
   color: #ffffff;
-  filter: drop-shadow(0 0 5px #ff0000);
+  filter: none;
   transform: scale(1.1) rotate(45deg) translateX(-2px) translateY(1px);
 }
 
