--- a/static/style.css
+++ b/static/style.css
@@ -136,42 +136,90 @@ a:hover {
   overflow-wrap: break-word;
 }
 
+.post-outro {
+  border-radius: 0 20px 20px 20px;
+}
+
+.post-content small {
+  display: block;
+  font-size: 0.85em;
+  color: #888888;
+  margin-top: 6px;
+}
+
+.post-opcoes {
+  display: none;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 5px;
+  z-index: 100;
+}
+
+.post-opcoes button {
+  background: none;
+  border: none;
+  color: red;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.like-count {
+  margin-left: -10px;
+  font-size: 14px;
+  vertical-align: middle;
+  font-weight: 600;
+}
+
+.like-btn {
+  background: none;
+  border: none;
+}
+
+.resposta-numero {
+  font-size: 14px;
+  font-weight: normal;
+  margin-left: -5px;
+  vertical-align: middle;
+  font-weight: 600;
+}
+
+.post-acoes {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+  margin-right: 18px;
+  align-items: center;
+}
+
+.icone {
+  width: 22px;
+  vertical-align: -1px;
+  margin-top: 2px;
+  margin-left: 3px;
+}
+
+.tres-pontos {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  width: 16px;
+  cursor: pointer;
+}
+
 .comentario-box {
+  padding: 4px 12px;
   margin-bottom: 10px;
+  border-radius: 12px;
+  background-color: #1a1a1a;
+  max-height: 60px;
+  overflow: hidden;
   box-sizing: border-box;
-  border-radius: 20px;
-  border: 1.6px solid #ff0000;
-  background-color: #000;
-  padding: 12px 20px;
 }
 
 .comentario-texto {
-  font-size: 1em;
-  line-height: 1.2em;
-  color: white;
-  overflow-wrap: break-word;
-  max-height: none;
-  padding: 0;
-  background-color: transparent;
-  border: none;
-  margin: 0;
-}
-
-.comentario-box .user-box {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin-bottom: 5px;
-  display: inline-block;
-}
-
-.comentario-box .user-box a {
-  color: #ff2626;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.comentario-box .comentario-texto {
   font-size: 14px;
   line-height: 1em;
   max-height: 50px;
