--- a/static/style.css
+++ b/static/style.css
@@ -213,7 +213,7 @@ a:hover {
   padding: 4px 12px;
   margin-bottom: 10px;
   border-radius: 12px;
-  max-height: none;
+  max-height: 60px;
   box-sizing: border-box;
 }
 
