--- a/templates/faq.html
+++ b/templates/faq.html
@@ -15,7 +15,7 @@
 
     <div class="faq-container">
       <div class="faq-header">
-        <h1>Perguntas Frequentes</h1>
+        <h1>FAQ - Quem somos</h1>
         <p>
           Opa eai? Eu sou o <strong>Mehran Louksa Mesrob</strong>, criador do
           Opinion.
