style: menos espaço entre cada comentario

--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -148,7 +148,7 @@
           <small>{{ item.tempo }}</small>
         </div>
       </div>
-      <hr />
+      <hr style="margin: 5px 0;" />
       {% else %}
       <p>Nenhum comentário ainda.</p>
       {% endfor %}
